--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@ header p{
     font-size: large;
 }
 
+section{
+    display: flex;
+
+}
+
+article{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 h3{
     font-size: 25px;
 }
@@ -20,6 +32,6 @@ section p{
 }
 
 img{
-    width: 50px;
-    height: 50px;
+    width: 15vw;
+    height: 10vw;
 }
